--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- <meta name="theme-color" content="#000000"> -->
@@ -9,12 +10,27 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anaheim">
 
     <title>SpaceXaminer</title>
-  </head>
-  <body>
+</head>
+
+<body>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <!-- <script src="%PUBLIC_URL%/scripts/three.min.js"></script>
+    <script src="%PUBLIC_URL%/scripts/OrbitControls.js"></script>
+    <script src="%PUBLIC_URL%/scripts/orbits.js"></script>
+    <script src="%PUBLIC_URL%/scripts/animations.js"></script> -->
+    <!-- <script src="%PUBLIC_URL%/scripts/main.js"></script> -->
+
     <div id="root"></div>
+
+    <script src="%PUBLIC_URL%/scripts/three.min.js"></script>
+    <script src="%PUBLIC_URL%/scripts/OrbitControls.js"></script>
+    <script src="%PUBLIC_URL%/scripts/orbits.js"></script>
+    <script src="%PUBLIC_URL%/scripts/animations.js"></script>
+    <script src="%PUBLIC_URL%/scripts/main.js"></script>
     <!--
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+
 </html>
