--- a/public/index.html
+++ b/public/index.html
@@ -14,19 +14,19 @@
 
 <body>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="%PUBLIC_URL%/scripts/three.min.js"></script>
+    <script src="%PUBLIC_URL%/scripts/OrbitControls.js"></script>
+    <script src="%PUBLIC_URL%/scripts/orbits.js"></script>
+    <script src="%PUBLIC_URL%/scripts/animations.js"></script>
+    <!-- <script src="%PUBLIC_URL%/scripts/main.js"></script> -->
+
+    <div id="root"></div>
+
     <!-- <script src="%PUBLIC_URL%/scripts/three.min.js"></script>
     <script src="%PUBLIC_URL%/scripts/OrbitControls.js"></script>
     <script src="%PUBLIC_URL%/scripts/orbits.js"></script>
     <script src="%PUBLIC_URL%/scripts/animations.js"></script> -->
     <!-- <script src="%PUBLIC_URL%/scripts/main.js"></script> -->
-
-    <div id="root"></div>
-
-    <script src="%PUBLIC_URL%/scripts/three.min.js"></script>
-    <script src="%PUBLIC_URL%/scripts/OrbitControls.js"></script>
-    <script src="%PUBLIC_URL%/scripts/orbits.js"></script>
-    <script src="%PUBLIC_URL%/scripts/animations.js"></script>
-    <script src="%PUBLIC_URL%/scripts/main.js"></script>
     <!--
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
