--- a/app/public/index.html
+++ b/app/public/index.html
@@ -12,12 +12,7 @@
             <img src="./img/banner.png" alt="">
             <div class="dropdown">
                 <button class="dropdown-button">Launches</button>
-                <div class="content">
-                    <button class="content-button" id="0">Launch</button>
-                    <button class="content-button" id="1">Launch</button>
-                    <button class="content-button" id="2">Launch</button>
-                    <button class="content-button" id="3">Launch</button>
-                </div>
+                <div class="content"></div>
             </div>
         </div>
         <div class="viewer" id="viewer"></div>
@@ -25,6 +20,7 @@
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script src="./scripts/three.min.js"></script>
         <script src="./scripts/OrbitControls.js"></script>
+        <script src="./scripts/launches.js"></script>
         <script src="./scripts/orbits.js"></script>
         <script src="./scripts/animations.js"></script>
         <script src="./scripts/main.js"></script>
