🌎 Finished manifest page and linked

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -8,14 +8,15 @@
         <title>SpaceXaminer</title>
     </head>
     <body>
-        <div class="header" id="header">
+        <div class="header">
             <img src="./img/banner.png" alt="">
+            <button class="manifest">Manifest</button>
             <div class="dropdown">
                 <button class="dropdown-button">Launches</button>
                 <div class="content"></div>
             </div>
         </div>
-        <div class="viewer" id="viewer"></div>
+        <div class="viewer"></div>
 
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script src="./scripts/three.min.js"></script>
