✅ Added capstone presentation information

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -8,6 +8,29 @@
         <title>SpaceXaminer</title>
     </head>
     <body>
+        <div class="tech-top">
+            <img class="tech-image" id="node" src="./img/node.png" alt="">
+            <img class="tech-image" id="express" src="./img/express.png" alt="">
+        </div>
+        <div class="tech-bottom">
+            <img class="tech-image" id="three" src="./img/three.jpg" alt="">
+            <img class="tech-image" id="sass" src="./img/sass.svg" alt="">
+            <img class="tech-image" id="webgl" src="./img/webgl.png" alt="">
+        </div>
+        <div class="contact">
+            <div id="github">
+                <img src="./img/github.png" alt=""><span>github.com/derekkramer</span>
+            </div>
+            <div id="linkedin">
+                <img src="./img/linkedin.png" alt=""><span>linkedin.com/in/derek-kramer</span>
+            </div>
+            <div id="email">
+                <img src="./img/mail.png" alt=""><span>derekdevelops@gmail.com</span>
+            </div>
+            <div id="phone">
+                <img src="./img/phone.png" alt=""><span>(303) 506-8669</span>
+            </div>
+        </div>
         <div class="header">
             <img src="./img/banner.png" alt="">
             <button class="manifest">Manifest</button>
