--- a/app/public/index.html
+++ b/app/public/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anaheim">
         <link rel="stylesheet" href="./css/main.css">
+        <link rel="icon" href="http://www.spacex.com/sites/all/themes/spacex2012/favicon.ico" type="image/x-icon">
 
         <title>SpaceXaminer</title>
     </head>
