--- a/app/public/manifest.html
+++ b/app/public/manifest.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anaheim">
         <link rel="stylesheet" href="./css/manifest.css">
+        <link rel="icon" href="http://www.spacex.com/sites/all/themes/spacex2012/favicon.ico" type="image/x-icon">
+
 
         <title>SpaceXaminer - Manifest</title>
     </head>
