📱 Added mobile responsive SCSS

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -9,7 +9,9 @@
         <title>SpaceXaminer</title>
     </head>
     <body>
-        <div class="tech-top">
+        <!-- Used for Capstone Presentation -->
+
+        <!-- <div class="tech-top">
             <img class="tech-image" id="node" src="./img/node.png" alt="">
             <img class="tech-image" id="express" src="./img/express.png" alt="">
         </div>
@@ -31,14 +33,12 @@
             <div id="phone">
                 <img src="./img/phone.png" alt=""><span>(303) 506-8669</span>
             </div>
-        </div>
-        <div class="header">
-            <img src="./img/banner.png" alt="">
-            <button class="manifest">Manifest</button>
-            <div class="dropdown">
-                <button class="dropdown-button">Launches</button>
-                <div class="content"></div>
-            </div>
+        </div> -->
+        <img class="header" src="./img/banner.png" alt="">
+        <button class="manifest">Manifest</button>
+        <div class="dropdown">
+            <button class="dropdown-button">Launches</button>
+            <div class="content"></div>
         </div>
         <div class="viewer"></div>
 
